sherpa-onnx/c-api/cxx-api.h


struct FeatureConfig {
  int32_t sample_rate = 16000;
  int32_t feature_dim = 80;
};
struct HomophoneReplacerConfig {
  std::string dict_dir;
  std::string lexicon;
  std::string rule_fsts;
};
struct OfflineTransducerModelConfig {
  std::string encoder;
  std::string decoder;
  std::string joiner;
};
struct OfflineParaformerModelConfig {
  std::string model;
};
struct OfflineNemoEncDecCtcModelConfig {
  std::string model;
};
struct OfflineWhisperModelConfig {
  std::string encoder;
  std::string decoder;
  std::string language;
  std::string task = "transcribe";
  int32_t tail_paddings = -1;
  bool enable_token_timestamps = false;
  bool enable_segment_timestamps = false;
};
struct OfflineCanaryModelConfig {
  std::string encoder;
  std::string decoder;
  std::string src_lang;
  std::string tgt_lang;
  bool use_pnc = true;
};
struct OfflineCohereTranscribeModelConfig {
  std::string encoder;
  std::string decoder;
  std::string language;
  bool use_punct = true;
  bool use_itn = true;
};
struct OfflineFireRedAsrModelConfig {
  std::string encoder;
  std::string decoder;
};
struct OfflineFireRedAsrCtcModelConfig {
  std::string model;
};
struct OfflineTdnnModelConfig {
  std::string model;
};
struct OfflineSenseVoiceModelConfig {
  std::string model;
  std::string language;
  bool use_itn = false;
};
struct OfflineDolphinModelConfig {
  std::string model;
};
struct OfflineZipformerCtcModelConfig {
  std::string model;
};
struct OfflineWenetCtcModelConfig {
  std::string model;
};
struct OfflineOmnilingualAsrCtcModelConfig {
  std::string model;
};
struct OfflineMedAsrCtcModelConfig {
  std::string model;
};
struct OfflineMoonshineModelConfig {
  std::string preprocessor;
  std::string encoder;
  std::string uncached_decoder;
  std::string cached_decoder;
  std::string merged_decoder;
};
struct OfflineFunASRNanoModelConfig {
  std::string encoder_adaptor;
  std::string llm;
  std::string embedding;
  std::string tokenizer;
  std::string system_prompt = "You are a helpful assistant.";
  std::string user_prompt = "语音转写：";
  int32_t max_new_tokens = 512;
  float temperature = 1e-6f;
  float top_p = 0.8f;
  int32_t seed = 42;
  std::string language;
  bool itn = true;
  std::string hotwords;
};
struct OfflineQwen3ASRModelConfig {
  std::string conv_frontend;
  std::string encoder;
  std::string decoder;
  std::string tokenizer;
  std::string hotwords;
  int32_t max_total_len = 512;
  int32_t max_new_tokens = 128;
  float temperature = 1e-6f;
  float top_p = 0.8f;
  int32_t seed = 42;
  std::string forced_aligner_conv_frontend;
  std::string forced_aligner_encoder;
  std::string forced_aligner_decoder;
  std::string forced_aligner_tokenizer;
};
struct OfflineModelConfig {
  OfflineTransducerModelConfig transducer;
  OfflineParaformerModelConfig paraformer;
  OfflineNemoEncDecCtcModelConfig nemo_ctc;
  OfflineWhisperModelConfig whisper;
  OfflineTdnnModelConfig tdnn;
  std::string tokens;
  int32_t num_threads = 1;
  bool debug = false;
  std::string provider = "cpu";
  std::string model_type;
  std::string modeling_unit = "cjkchar";
  std::string bpe_vocab;
  std::string telespeech_ctc;
  OfflineSenseVoiceModelConfig sense_voice;
  OfflineMoonshineModelConfig moonshine;
  OfflineFireRedAsrModelConfig fire_red_asr;
  OfflineDolphinModelConfig dolphin;
  OfflineZipformerCtcModelConfig zipformer_ctc;
  OfflineCanaryModelConfig canary;
  OfflineWenetCtcModelConfig wenet_ctc;
  OfflineOmnilingualAsrCtcModelConfig omnilingual;
  OfflineMedAsrCtcModelConfig medasr;
  OfflineFunASRNanoModelConfig funasr_nano;
  OfflineFireRedAsrCtcModelConfig fire_red_asr_ctc;
  OfflineQwen3ASRModelConfig qwen3_asr;
  OfflineCohereTranscribeModelConfig cohere_transcribe;
};
struct OfflineLMConfig {
  std::string model;
  float scale = 1.0;
};
struct OfflineCtcFstDecoderConfig {
  std::string graph;
  int32_t max_active = 3000;
};
struct OfflineRecognizerConfig {
  FeatureConfig feat_config;
  OfflineModelConfig model_config;
  OfflineLMConfig lm_config;
  std::string decoding_method = "greedy_search";
  int32_t max_active_paths = 4;
  std::string hotwords_file;
  float hotwords_score = 1.5;
  std::string rule_fsts;
  std::string rule_fars;
  float blank_penalty = 0;
  HomophoneReplacerConfig hr;
  OfflineCtcFstDecoderConfig ctc_fst_decoder_config;
};